# asbjborg.github.io

./: .cursorrules  .env.example  .gitignore  .markdownlint.json  .markdownlint.yml  Gemfile  README.md  _config.yml  commit-message.txt  echo "Running ssh-keygen..." && ssh-keygen -t ed25519 -C "contact@moosmann-consulting.com"  echo "Running ssh-keygen..." && ssh-keygen -t ed25519 -C "contact@moosmann-consulting.com".pub  index.html  pyproject.toml  requirements.txt  styles.css
_data/: contact.yml
_drafts/: building-a-bidirectional-obsidian-jekyll-sync-engine.md
_includes/: footer.html  sidebar.html
_layouts/: tags.html
_plugins/: posts-lastmod-hook.rb
_posts/: 2024-02-07-welcome.md  2024-12-02-sinking-mankind---new-track-published-on-soundcloud.md  2024-12-02-sinking-mankind-new-track-published-on-soundcloud.md  2024-12-03-pair-programming-with-ai---a-journey-of-discovery.md  2024-12-03-pair-programming-with-ai-a-journey-of-discovery.md  2024-12-03-the-harmony-of-stillness-and-action---a-path-to-balanced-living.md  2024-12-03-the-harmony-of-stillness-and-action-a-path-to-balanced-living.md  2024-12-03-the-shadow-of-perfection-new-track-published-on-soundcloud.md  2024-12-08-turn-to-stone-new-track-published-on-soundcloud.md  2025-01-22-how-to-actually-setup-github-mcp-server-with-docker-in-cursor.md  2025-06-28-how-to-actually-setup-github-mcp-server-with-docker-in-cursor.md  2025-10-13-the-silent-symphony-teaser.md  2026-05-19-per-and-associates-night-shift.md  2026-07-05-building-asmos-my-personal-ai-operating-system.md  (+4 more)
_tabs/: about.md
docs/: api.md  (+10 more)
(+102 files in other folders)
