[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sync_engine"
version = "2.0.0"
description = "Bidirectional sync engine for Obsidian and Jekyll"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Asbjørn Borg", email = "asbjborg@gmail.com" },
]

[tool.pytest.ini_options]
pythonpath = [
    "scripts"
] 